src/components/GalleryCard/gallery.css
.cardContainerGal {
  width: 15rem;
  text-align: center;
  margin: 10px;
  background-color: whitesmoke;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
  transition: all .2s ease-in-out;
}
    .cardContainerGal:hover {
       transform: scale(1.2);
    }

.cardBodyGal {
  font-weight: medium;
}

.cardBodyGal h3 {
  background-color: darkgray;
}
.sameLine {
    border: 1px solid red;
    
}
.linkButton {
  height: 40px;
  width: 40px;
  border-radius: 40px;
  background-color:darkblue;
  color: whitesmoke;
  display: inline-block;
}

.linkButton:hover {
  cursor:pointer;
}

 .discord {
  height: 50px;
  width: 50px;
  display: inline-block;
}
.tourneyimg {
  background-size: cover;
  height: 15rem;
  width: 15rem;
}

